--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
         <google.geocoder.version>0.16</google.geocoder.version>
         <granule.version>1.0.11-SNAPSHOT</granule.version>
 		<hibernate.tools.version>4.3.1.CR1</hibernate.tools.version>
-        <hazelcast.version>3.3-EA2</hazelcast.version>
+        <hazelcast.version>3.3-RC2</hazelcast.version>
 		<htmlunit.version>2.15</htmlunit.version>
         <infinispan.version>6.0.0.Final</infinispan.version>
 		<itextpdf5.version>5.5.2</itextpdf5.version>
