--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
         <google.geocoder.version>0.16</google.geocoder.version>
         <granule.version>1.0.11-SNAPSHOT</granule.version>
 		<hibernate.tools.version>4.3.1.CR1</hibernate.tools.version>
-        <hazelcast.version>3.3-RC2</hazelcast.version>
+        <hazelcast.version>3.3.1</hazelcast.version>
 		<htmlunit.version>2.15</htmlunit.version>
         <infinispan.version>6.0.0.Final</infinispan.version>
 		<itextpdf5.version>5.5.2</itextpdf5.version>
@@ -135,7 +135,7 @@
         <jqueryraty.webjars.version>2.5.2</jqueryraty.webjars.version>
         <jquerychosen.webjars.version>1.1.0-1</jquerychosen.webjars.version>
 		<jqueryeasing.webjars.version>1.3</jqueryeasing.webjars.version>
-        <jqueryeasyzoom.webjars.version>2.0.5</jqueryeasyzoom.webjars.version>
+        <jqueryeasyzoom.webjars.version>2.2.0</jqueryeasyzoom.webjars.version>
         <jquerysoundmanager2.webjars.version>2.97a.20131201</jquerysoundmanager2.webjars.version>
 		<jqueryflowplayer.webjars.version>5.4.6</jqueryflowplayer.webjars.version>
 		<jsoup.version>1.7.3</jsoup.version>
