--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
 		<jetty.version>9.1.3.v20140225</jetty.version>
         <jetty.npn.boot.version>1.1.7.v20140316</jetty.npn.boot.version>
         <jetty.npn.api.version>1.1.0.v20120525</jetty.npn.api.version>
+		<jgravatar.version>1.0</jgravatar.version>
 		<joda.time.jsptags.version>1.1.1</joda.time.jsptags.version>
 		<jquery.webjars.version>1.10.2</jquery.webjars.version>
         <jqueryui.webjars.version>1.11.0</jqueryui.webjars.version>
