--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,7 @@
         <reflections.version>0.9.9-RC2</reflections.version>
 		<selenium.version>2.42.2</selenium.version>
 		<smartsprites.version>0.2.11-SNAPSHOT</smartsprites.version>
+		<slick.webjars.version>1.3.13</slick.webjars.version>
 		<spring.bom.version>1.2.0.BUILD-SNAPSHOT</spring.bom.version>
 		<spring-data-elasticsearch.version>1.0.0.BUILD-PATCHED-SNAPSHOT</spring-data-elasticsearch.version>
 		<spring-data-releasetrain.version>Fowler-BUILD-SNAPSHOT</spring-data-releasetrain.version>
