--- a/pom.xml
+++ b/pom.xml
@@ -76,14 +76,19 @@
     </ciManagement>
     <distributionManagement>
         <site>
-            <id>website</id>
-            <url>scp://www.nemesis.com/www/docs/wiki/${project.version}/</url>
+            <id>nemesis-docs</id>
+            <url>scp://www.nemesis.bg/var/www/html/docs/${project.version}/</url>
         </site>
-        <repository>
-            <id>nemesis-official-repository</id>
-            <name>Nemesis Official Repository</name>
-            <url>ftp://repository.nemesis.bg/repository</url>
-        </repository>
+		<repository>
+			<id>nemesis-repository</id>
+			<name>nemesis-repository-releases</name>
+			<url>https://repository.nemesis.bg/artifactory/ext-release-local</url>
+		</repository>
+		<snapshotRepository>
+			<id>nemesis-repository</id>
+			<name>nemesis-repository-snapshots</name>
+			<url>https://repository.nemesis.bg/artifactory/ext-snapshot-local</url>
+		</snapshotRepository>
     </distributionManagement>
 
     <properties>
@@ -409,6 +414,11 @@
                         <artifactId>asciidoctor-maven-plugin</artifactId>
                         <version>${asciidoctor.version}</version>
                     </dependency>
+					<dependency><!-- add support for ssh/scp -->
+						<groupId>org.apache.maven.wagon</groupId>
+						<artifactId>wagon-ssh</artifactId>
+						<version>2.8</version>
+					</dependency>
                 </dependencies>
             </plugin>
             <plugin>
