--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <name>Nemesis BOM</name>
 	<description>BOM module for the Nemesis platform.</description>
 	<url>http://wiki.nemesis.com/bom/</url>
+	<inceptionYear>2010</inceptionYear>
     <organization>
         <name>Nemesis Software, Ltd.</name>
         <url>http://nemesis.bg/</url>
@@ -44,21 +45,26 @@
     </licenses>
 	<developers>
 		<developer>
-			<id>ptahchiev</id>
+			<id>tahchiev</id>
 			<name>Petar Tahchiev</name>
-			<email>ptahchiev at nemesis.bg</email>
+			<email>tahchiev@nemesis.bg</email>
 			<organization>Nemesis Software, Ltd.</organization>
 			<organizationUrl>http://www.nemesis.bg</organizationUrl>
 			<roles>
 				<role>Project lead</role>
 			</roles>
+			<timezone>+2</timezone>
 		</developer>
 		<developer>
-			<id>ngochev</id>
+			<id>gochev</id>
 			<name>Nayden Gochev</name>
-			<email>ngochev at nemesis.bg</email>
+			<email>gochev@nemesis.bg</email>
 			<organization>Nemesis Software, Ltd.</organization>
 			<organizationUrl>http://www.nemesis.bg</organizationUrl>
+			<roles>
+				<role>Committer</role>
+			</roles>
+			<timezone>+2</timezone>
 		</developer>
 	</developers>
 
@@ -73,6 +79,14 @@
     <ciManagement>
         <system>Bamboo</system>
         <url>https://nemesis.atlassian.net/builds/browse/NEMESIS-NEMESIS</url>
+		<notifiers>
+			<notifier>
+				<type>mail</type>
+				<configuration>
+					<address>notifications@nemesis.bg</address>
+				</configuration>
+			</notifier>
+		</notifiers>
     </ciManagement>
     <distributionManagement>
         <site>
@@ -96,6 +110,7 @@
 		<asm.version>4.1</asm.version>
 		<atmosphere.version>2.2.0</atmosphere.version>
 		<cglib.version>3.1</cglib.version>
+		<checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength</checkstyle.violation.ignore>
 		<clover.version>3.3.0</clover.version>
         <codemodel.version>2.6</codemodel.version>
 		<codemirror.webjars.version>4.4</codemirror.webjars.version>
@@ -153,18 +168,19 @@
         <maven.war.plugin.version>2.4</maven.war.plugin.version>
         <maven.surefire.plugin.version>2.15</maven.surefire.plugin.version>
         <maven.jxr.plugin.version>2.3</maven.jxr.plugin.version>
+		<maven.checkstyle.plugin.version>2.13</maven.checkstyle.plugin.version>
         <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
         <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
         <maven.site.plugin.version>3.3</maven.site.plugin.version>
         <maven.failsafe.plugin.version>2.15</maven.failsafe.plugin.version>
         <maven.enforcer.plugin.version>1.3.1</maven.enforcer.plugin.version>
-        <maven.release.plugin.version>2.4.1</maven.release.plugin.version>
+        <maven.release.plugin.version>2.5.1</maven.release.plugin.version>
         <maven.plugin.log4j.version>1.0.1</maven.plugin.log4j.version>
         <maven.plugin.plugin.version>3.2</maven.plugin.plugin.version>
         <maven.project.info.reports.plugin>2.7</maven.project.info.reports.plugin>
         <maven.appassembler.plugin.version>1.8</maven.appassembler.plugin.version>
         <maven.changes.plugin.version>2.9</maven.changes.plugin.version>
-        <maven.findbugs.plugin.version>2.5.2</maven.findbugs.plugin.version>
+        <maven.findbugs.plugin.version>2.5.5</maven.findbugs.plugin.version>
         <maven.rat.version.plugin>0.10</maven.rat.version.plugin>
         <maven.extraenforcer.version>1.0-beta-2</maven.extraenforcer.version>
         <maven.cargo.plugin>1.4.3</maven.cargo.plugin>
@@ -363,18 +379,77 @@
                 </excludes>
             </resource>
         </resources>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>${maven.compile.source}</source>
+						<target>${maven.compile.target}</target>
+						<compilerArgument>-proc:none</compilerArgument>
+						<compilerArgument>-Xlint:unchecked</compilerArgument>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>${maven.site.plugin.version}</version>
+					<configuration>
+						<generateReports>false</generateReports>
+						<generateSitemap>true</generateSitemap>
+						<feedType>atom_1.0</feedType>
+						<relativizeDecorationLinks>false</relativizeDecorationLinks>
+						<locales>en</locales>
+						<path>${project.distributionManagement.site.url}</path> <!-- This should allow multimodules to have friendly urls -->
+						<!--topSiteURL></topSiteURL--> <!-- try this also -->
+					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>org.asciidoctor</groupId>
+							<artifactId>asciidoctor-maven-plugin</artifactId>
+							<version>${asciidoctor.version}</version>
+						</dependency>
+						<dependency><!-- add support for ssh/scp -->
+							<groupId>org.apache.maven.wagon</groupId>
+							<artifactId>wagon-ssh</artifactId>
+							<version>2.8</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>${maven.release.plugin.version}</version>
+					<configuration>
+						<useReleaseProfiles>true</useReleaseProfiles>
+						<releaseProfiles>apache-release</releaseProfiles>
+						<goals>deploy</goals>
+						<arguments>${arguments}</arguments>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-checkstyle-plugin</artifactId>
+					<version>${maven.checkstyle.plugin.version}</version>
+					<configuration>
+						<configLocation>src/main/resources/nemesis-checkstyle.xml</configLocation>
+						<headerLocation>src/main/resources/nemesis-header.txt</headerLocation>
+						<!-- workaround to avoid analysing generated content (Modello, plugin help mojo, ...) -->
+						<sourceDirectory>src/main/java</sourceDirectory>
+						<testSourceDirectory>src/test/java</testSourceDirectory>
+						<failOnViolation>true</failOnViolation>
+						<logViolationsToConsole>true</logViolationsToConsole>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>findbugs-maven-plugin</artifactId>
+					<version>${maven.findbugs.plugin.version}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler.plugin.version}</version>
-                <configuration>
-                    <source>${maven.compile.source}</source>
-                    <target>${maven.compile.target}</target>
-                    <compilerArgument>-proc:none</compilerArgument>
-                    <compilerArgument>-Xlint:unchecked</compilerArgument>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -400,31 +475,95 @@
                     <excludedGroups>com.nemesis.platform.util.test.IntegrationTest</excludedGroups>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>${maven.site.plugin.version}</version>
-                <configuration>
-                    <generateReports>false</generateReports>
-                    <locales>en</locales>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.asciidoctor</groupId>
-                        <artifactId>asciidoctor-maven-plugin</artifactId>
-                        <version>${asciidoctor.version}</version>
-                    </dependency>
-					<dependency><!-- add support for ssh/scp -->
-						<groupId>org.apache.maven.wagon</groupId>
-						<artifactId>wagon-ssh</artifactId>
-						<version>2.8</version>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>${maven.checkstyle.plugin.version}</version>
+				<executions>
+					<execution>
+						<id>checkstyle-check</id>
+						<phase>install</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>${maven.enforcer.plugin.version}</version>
+				<executions>
+					<execution>
+						<id>enforce-bytecode-version</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+                                    <version>3.0.0-alpha-1</version>
+                                </requireMavenVersion>
+								<enforceBytecodeVersion>
+									<maxJdkVersion>${maven.compile.target}</maxJdkVersion>
+								</enforceBytecodeVersion>
+								<!--banDuplicateClasses>
+                                    <findAllDuplicates>true</findAllDuplicates>
+                                    <ignoreClasses>
+                                        <ignoreClass>javax.servlet.*</ignoreClass>
+                                        <ignoreClass>javax.persistence.*</ignoreClass>
+                                        <ignoreClass>org.codehaus.plexus.util.*</ignoreClass>
+										<ignoreClass>org.bouncycastle.*</ignoreClass>
+                                    </ignoreClasses>
+                                </banDuplicateClasses-->
+							</rules>
+							<fail>true</fail>
+						</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>extra-enforcer-rules</artifactId>
+						<version>${maven.extraenforcer.version}</version>
 					</dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
+				</dependencies>
+			</plugin>
+			<!--plugin>
+				<groupId>org.apache.rat</groupId>
+				<artifactId>apache-rat-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>rat-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals-->
+						<!--
+							The following configuration is needed otherwise 
+							a release source package can't be built without
+							changing it.
+							https://issues.apache.org/jira/browse/RAT-184
+						-->
+						<!--configuration>
+							<excludes>
+								<exclude>DEPENDENCIES</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin-->
+			<plugin>
                 <groupId>org.apache.rat</groupId>
                 <artifactId>apache-rat-plugin</artifactId>
                 <version>${maven.rat.version.plugin}</version>
+				<executions>
+					<execution>
+						<id>rat-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
                 <configuration>
                     <excludeSubProjects>false</excludeSubProjects>
                     <includes>
@@ -436,6 +575,7 @@
                         <exclude>**/target/**/*</exclude>
                         <exclude>**/.settings/**</exclude>
                         <exclude>**/.svn/**/*</exclude>
+						<exclude>**/.git/**/*</exclude>
                     </excludes>
                     <licenses>
                         <license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
@@ -465,54 +605,42 @@
                     </licenseFamilies>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <version>${maven.enforcer.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>enforce-versions</id>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireMavenVersion>
-                                    <version>3.0.0-alpha-1</version>
-                                </requireMavenVersion>
-                                <requireJavaVersion>
-                                    <version>1.7</version>
-                                </requireJavaVersion>
-                                <banDuplicateClasses>
-                                    <findAllDuplicates>true</findAllDuplicates>
-                                    <ignoreClasses>
-                                        <ignoreClass>javax.servlet.*</ignoreClass>
-                                        <ignoreClass>javax.persistence.*</ignoreClass>
-                                        <ignoreClass>org.codehaus.plexus.util.*</ignoreClass>
-										<ignoreClass>org.bouncycastle.*</ignoreClass>
-                                    </ignoreClasses>
-                                </banDuplicateClasses>
-                            </rules>
-                            <fail>false</fail>
-                        </configuration>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>extra-enforcer-rules</artifactId>
-                        <version>${maven.extraenforcer.version}</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>${maven.release.plugin.version}</version>
-            </plugin>
         </plugins>
     </build>
+	
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>${maven.project.info.reports.plugin}</version>
+				<configuration>
+					<dependencyLocationsEnabled>false</dependencyLocationsEnabled><!-- waiting for MPIR-267 -->
+				</configuration>
+				<reportSets>
+					<reportSet>
+							<reports>
+								<report>index</report>
+								<report>summary</report>
+								<report>dependency-info</report>
+								<report>modules</report>
+								<report>project-team</report>
+								<report>scm</report>
+								<report>issue-tracking</report>
+								<report>mailing-list</report>
+								<report>dependency-management</report>
+								<report>dependencies</report>
+								<report>dependency-convergence</report>
+								<report>cim</report>
+								<report>plugin-management</report>
+								<report>plugins</report>
+								<report>distribution-management</report>
+							</reports>
+						</reportSet>
+				</reportSets>
+			</plugin>
+		</plugins>
+	</reporting>
 	
 	<profiles>
         <profile>
