--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,7 @@
         <maven.changes.plugin.version>2.9</maven.changes.plugin.version>
         <maven.findbugs.plugin.version>2.5.5</maven.findbugs.plugin.version>
 		<maven.pmd.plugin.version>3.3</maven.pmd.plugin.version>
+		<maven.proguard.plugin.version>2.0.8</maven.proguard.plugin.version>
         <maven.rat.version.plugin>0.10</maven.rat.version.plugin>
         <maven.extraenforcer.version>1.0-beta-2</maven.extraenforcer.version>
         <maven.cargo.plugin>1.4.3</maven.cargo.plugin>
@@ -204,6 +205,7 @@
 		<smartsprites.version>0.2.11-SNAPSHOT</smartsprites.version>
 		<slick.webjars.version>1.3.13</slick.webjars.version>
 		<spring.bom.version>1.2.0.BUILD-SNAPSHOT</spring.bom.version>
+		<spring.profiles.active>dev</spring.profiles.active>
 		<spring-data-elasticsearch.version>1.0.0.BUILD-PATCHED-SNAPSHOT</spring-data-elasticsearch.version>
 		<spring-data-releasetrain.version>Fowler-BUILD-SNAPSHOT</spring-data-releasetrain.version>
         <spring.payment.version>0.5.0.SNAPSHOT</spring.payment.version>
@@ -448,6 +450,11 @@
 					<artifactId>findbugs-maven-plugin</artifactId>
 					<version>${maven.findbugs.plugin.version}</version>
 				</plugin>
+				<plugin>
+					<groupId>com.github.wvengen</groupId>
+					<artifactId>proguard-maven-plugin</artifactId>
+					<version>${maven.proguard.plugin.version}</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
         <plugins>
@@ -520,8 +527,8 @@
 				</configuration>
 				<executions>
 					<execution>
-						<id>check</id>
-						<phase>install</phase>
+						<id>pmd-check</id>
+						<phase>deploy</phase>
 						<goals>
 							<goal>check</goal>
 						</goals>
@@ -645,6 +652,32 @@
                     </licenseFamilies>
                 </configuration>
             </plugin>
+			<!--plugin>
+				<groupId>com.github.wvengen</groupId>
+				<artifactId>proguard-maven-plugin</artifactId>
+				<version>${maven.proguard.plugin.version}</version>
+				<configuration>
+					<maxMemory>256m</maxMemory>
+					<injar>classes</injar>
+					<libs>
+						<lib>${java.home}/lib/rt.jar</lib>
+						<lib>${java.home}/lib/jsse.jar</lib>
+					</libs>
+					<obfuscate>true</obfuscate>
+					<attach>true</attach>
+					<addMavenDescriptor>false</addMavenDescriptor>
+					<proguardInclude>src/main/resources/proguard.conf</proguardInclude>
+				</configuration>
+				<executions>
+					<execution>
+						<id>proguard</id>
+						<phase>package</phase>
+						<goals>
+							<goal>proguard</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin-->
         </plugins>
     </build>
 	
