--- a/pom.xml
+++ b/pom.xml
@@ -201,7 +201,7 @@
 		<recaptcha4j.version>0.0.7</recaptcha4j.version>
         <reflections.version>0.9.9-RC2</reflections.version>
 		<selenium.version>2.42.2</selenium.version>
-		<smartsprites.version>0.2.11-SNAPSHOT</smartsprites.version>
+		<smartsprites.version>0.2.10</smartsprites.version>
 		<slick.webjars.version>1.3.13</slick.webjars.version>
 		<spring.bom.version>1.2.0.BUILD-SNAPSHOT</spring.bom.version>
 		<spring-data-elasticsearch.version>1.0.0.BUILD-PATCHED-SNAPSHOT</spring-data-elasticsearch.version>
@@ -510,6 +510,7 @@
 				<version>${maven.pmd.plugin.version}</version>
 				<configuration>
 					<targetJdk>${maven.compiler.source}</targetJdk>
+					<printFailingErrors>true</printFailingErrors>
 					<rulesets>
 						<ruleset>rulesets/maven.xml</ruleset>
 					</rulesets>
