--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,8 @@
         <jquerycookiecuttr.version>4dc24d9628</jquerycookiecuttr.version>
         <jquerycookie.version>1.4.0</jquerycookie.version>
         <jquerycolorbox.webjars.version>1.4.33</jquerycolorbox.webjars.version>
+        <jquerypassy.webjars.version>1.0</jquerypassy.webjars.version>
+        <jquerypayment.webjars.version>1.1.4</jquerypayment.webjars.version>
         <jqueryjcarousel.webjars.version>0.3.1</jqueryjcarousel.webjars.version>
         <jqueryraty.webjars.version>2.5.2</jqueryraty.webjars.version>
         <jquerychosen.webjars.version>1.1.0-1</jquerychosen.webjars.version>
@@ -702,6 +704,25 @@
             <build>
                 <plugins>
 					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>cobertura-maven-plugin</artifactId>
+						<version>2.6</version>
+						<configuration>
+							<format>xml</format>
+							<maxmem>256m</maxmem>
+							<aggregate>true</aggregate>
+						</configuration>
+						<executions>
+							<execution>
+								<id>cobertura-instrument</id>
+								<phase>process-classes</phase>
+								<goals>
+									<goal>instrument</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<!--plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
 						<version>${maven.jacoco.plugin.version}</version>
@@ -712,12 +733,7 @@
 									<goal>prepare-agent</goal>
 								</goals>
 								<configuration>
-									<!-- Sets the path to the file which contains the execution data. -->
 									<destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
-									<!--
-										Sets the name of the property containing the settings
-										for JaCoCo runtime agent.
-									-->
 									<propertyName>surefireArgLine</propertyName>
 								</configuration>
 							</execution>
@@ -728,9 +744,7 @@
 									<goal>report</goal>
 								</goals>
 								<configuration>
-									<!-- Sets the path to the file which contains the execution data. -->
 									<dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
-									<!-- Sets the output directory for the code coverage report. -->
 									<outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
 								</configuration>
 							</execution>
@@ -741,12 +755,7 @@
 									<goal>prepare-agent</goal>
 								</goals>
 								<configuration>
-									<!-- Sets the path to the file which contains the execution data. -->
 									<destFile>${project.build.directory}/coverage-reports/jacoco-it.exec</destFile>
-									<!--
-										Sets the name of the property containing the settings
-										for JaCoCo runtime agent.
-									-->
 									<propertyName>failsafeArgLine</propertyName>
 								</configuration>
 							</execution>
@@ -757,14 +766,12 @@
 									<goal>report</goal>
 								</goals>
 								<configuration>
-									<!-- Sets the path to the file which contains the execution data. -->
 									<dataFile>${project.build.directory}/coverage-reports/jacoco-it.exec</dataFile>
-									<!-- Sets the output directory for the code coverage report. -->
 									<outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
 								</configuration>
 							</execution>
 						</executions>
-					</plugin>
+					</plugin-->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
