--- a/pom.xml
+++ b/pom.xml
@@ -150,8 +150,8 @@
 		<joda.time.jsptags.version>1.1.1</joda.time.jsptags.version>
 		<jquery.webjars.version>1.10.2</jquery.webjars.version>
         <jqueryui.webjars.version>1.11.0</jqueryui.webjars.version>
-    <jquerymobile.webjars.version>1.4.3</jquerymobile.webjars.version>
-    <fontawesome.webjars.version>4.3.0</fontawesome.webjars.version>
+		<jquerymobile.webjars.version>1.4.3</jquerymobile.webjars.version>
+		<fontawesome.webjars.version>4.3.0</fontawesome.webjars.version>
 		<jquerycycle2.webjars.version>2.1.0</jquerycycle2.webjars.version>
         <jqueryatmosphere.webjars.version>2.1.6</jqueryatmosphere.webjars.version>
         <jqueryform.webjars.version>3.28.0-2013.02.06-1</jqueryform.webjars.version>
@@ -209,7 +209,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<recaptcha4j.version>0.0.7</recaptcha4j.version>
-        <reflections.version>0.9.9-RC2</reflections.version>
+        <reflections.version>0.9.9</reflections.version>
 		<selenium.version>2.42.2</selenium.version>
 		<smartsprites.version>0.2.10</smartsprites.version>
 		<slick.webjars.version>1.3.13</slick.webjars.version>
@@ -478,7 +478,7 @@
                     <excludedGroups>com.nemesis.platform.util.test.IntegrationTest</excludedGroups>
                 </configuration>
             </plugin>
-			<!--plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>${maven.checkstyle.plugin.version}</version>
@@ -530,7 +530,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin-->
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
@@ -571,29 +571,6 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			<!--plugin>
-				<groupId>org.apache.rat</groupId>
-				<artifactId>apache-rat-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>rat-check</id>
-						<goals>
-							<goal>check</goal>
-						</goals-->
-						<!--
-							The following configuration is needed otherwise
-							a release source package can't be built without
-							changing it.
-							https://issues.apache.org/jira/browse/RAT-184
-						-->
-						<!--configuration>
-							<excludes>
-								<exclude>DEPENDENCIES</exclude>
-							</excludes>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin-->
 			<plugin>
                 <groupId>org.apache.rat</groupId>
                 <artifactId>apache-rat-plugin</artifactId>
