--- a/pom.xml
+++ b/pom.xml
@@ -703,6 +703,11 @@
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
 						<version>${maven.jacoco.plugin.version}</version>
+						<configuration>
+							<excludes>
+								<exclude>**org.drools*</exclude>
+							</excludes>
+						</configuration>
 						<executions>
 							<execution>
 								<id>pre-unit-test</id>
